# quick_trade

./: AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tests.manifest
src-tauri/capabilities/: default.json
src-tauri/examples/: ws_probe.rs
src-tauri/icons/: icon.icns
src-tauri/icons.bak/: icon.icns
src-tauri/src/: broker.rs  candle_cache.rs  chart_image.rs  commands.rs  config.rs  engine.rs  error.rs  ledger.rs  lib.rs  main.rs  market_history.rs  mock.rs  state.rs  types.rs  util.rs
src-tauri/src/automation/: mod.rs  oco.rs  openai.rs  runtime.rs  schedule.rs  shadow.rs
src-tauri/src/kis/: account.rs  auth.rs  calendar.rs  crypto.rs  inquiry.rs  mod.rs  order.rs  quote.rs  rest.rs  ws.rs
src-tauri/tests/: demo_trading.rs  manifest_smoke.rs
src/components/: AutomationPanel.tsx  HistoryModal.tsx  MiniChart.tsx  ModeBar.tsx  ReservedSell.tsx  SettingsModal.tsx  StatusStrip.tsx  TitleBar.tsx  Toast.tsx  TradeBar.tsx  TradeButtons.tsx
src/hooks/: useTauriEvents.ts
src/lib/: automationPresentation.test.ts  automationPresentation.ts  candles.test.ts  candles.ts  format.test.ts  format.ts  llmUsage.test.ts  llmUsage.ts  pnl.test.ts  pnl.ts  tauri.ts  theme.ts
src/stores/: accountStore.ts  automationStore.test.ts  automationStore.ts  marketStore.test.ts  marketStore.ts  reservationStore.test.ts  reservationStore.ts  settingsStore.ts  uiStore.ts
